# biohack-debunker

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.deepeval.yml  docker-compose.integration.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
frontend/: Dockerfile  README.md  app.py
services/analysis-service/: Dockerfile  README.md  model_routing.policy.example.yml  pyproject.toml
services/analysis-service/deepeval-outputs/: case-001.json
services/analysis-service/src/analysis_service/: llm_client.py  main.py  observability.py  schemas.py
services/analysis-service/src/analysis_service/chains/: __init__.py  claim_analyzer.py  claim_extractor.py  report_generator.py
services/analysis-service/src/analysis_service/prompts/: __init__.py  analysis.py  extraction.py  report.py  search_query.py
services/analysis-service/tests/deepeval/: README.md  conftest.py  test_deepeval_analysis.py  tests.md
services/analysis-service/tests/deepeval/fixtures/: analysis_dataset.json  case-001.json  case-002.json  case-003.json  case-004.json  case-005.json  case-006.json  case-007.json  case-008.json  case-009.json  case-010.json  case-011.json  case-012.json  case-013.json  case-014.json  case-015.json  case-016.json  case-017.json  case-018.json  case-019.json  case-020.json  case-021.json  case-022.json  case-023.json  case-024.json  case-025.json  case-026.json  case-027.json  case-028.json  case-029.json  case-030.json  case-031.json  case-032.json  case-033.json  case-034.json  case-035.json  case-036.json
services/analysis-service/tests/integration/: run_analysis.py  run_analysis_real.py  run_analysis_stub.py  test_analysis.py  test_analysis_real.py
services/analysis-service/tests/unit/: test_llm_fallback.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/src/api_gateway/: __init__.py  config.py  db.py  main.py  observability.py  redis_client.py  schemas.py  worker.py
services/api-gateway/src/api_gateway/middleware/: __init__.py  auth.py  rate_limit.py
services/api-gateway/src/api_gateway/routers/: analysis.py  feed.py  health.py
services/api-gateway/src/api_gateway/services/: analysis_queue.py  orchestrator.py
services/api-gateway/tests/integration/: test_gateway.py
services/mock-external-service/: Dockerfile  README.md  pyproject.toml
services/mock-external-service/src/mock_external_service/: main.py
services/research-service/: Dockerfile  README.md  pyproject.toml
services/research-service/src/research_service/: __init__.py  main.py  observability.py  openalex_client.py  pubmed_client.py  schemas.py  tavily_client.py  vector_store.py
services/research-service/tests/integration/: run_research.py  run_research_real.py  run_research_stub.py  test_research.py  test_research_real.py
services/transcription-service/: Dockerfile  Dockerfile.test  README.md  pyproject.toml
services/transcription-service/src/transcription_service/: __init__.py  errors.py  main.py  observability.py  schemas.py  transcript_parser.py  youtube_client.py  yt_dlp_runner.py
services/transcription-service/tests/: mock-yt-dlp
services/transcription-service/tests/integration/: test_transcription.py  test_transcription_real.py  test_transcription_stub.py
services/transcription-service/tests/unit/: test_transcript_parser.py
(+40 files in other folders)
