[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis-service"
version = "0.1.0"
description = "Claim extraction and analysis service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "prometheus-client>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_service"]
