[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-gateway"
version = "0.1.0"
description = "FastAPI gateway service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "redis>=5.0",
  "uvicorn>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
