[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-external-service"
version = "0.1.0"
description = "Mock external dependencies for tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mock_external_service"]
