[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-service"
version = "0.1.0"
description = "Medical research retrieval service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "prometheus-client>=0.20",
  "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_service"]
