[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcription-service"
version = "0.1.0"
description = "YouTube transcription service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "yt-dlp>=2024.4.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_service"]
